# quit

./: QuitDialog.vala  QuitDock.vala  QuitDockItem.vala  QuitDockItemPreferences.vala  README.md  SessionManager.vala  SettingsManager.vala  SettingsWindow.vala  meson.build  quit.gresource.xml
